add_executable(
    itoa-benchmark
    amartin.cpp
    branchlut.cpp
    branchlut2.cpp
    count.cpp
    countdecimaldigit.h
    countlut.cpp
    digitslut.h
    folly.cpp
    itoa_jeaiii.cpp
    itoa_jeaiii_bind.cpp
    itoa_ljust.h
    itoa_ljust_impl.h
    lut.cpp
    machine.h
    main.cpp
    msinttypes
    mwilson.cpp
    naive.cpp
    null.cpp
    ostringstream.cpp
    ostrstream.cpp
    resultfilename.h
    sprintf.cpp
    sse2.cpp
    test.h
    timer.h
    tmueller.cpp
    to_string.cpp
    unnamed.cpp
    unrolledlut.cpp
    vc.cpp)
